Revision history for Plate

{{$NEXT}}

1.6       2024-07-02 10:47:39+00:00 UTC
    - New filter method to apply filters manually
    - Make does_exist, can_serve & filter callable inside templates

1.5       2022-11-30 13:14:16+00:00 Europe/London
    - Add locally defined filters

1.4       2021-08-08 16:37:30+01:00 Europe/London
    - Improved can_serve, check a template by name or content
    - Add error message for deleted filters

0.4       2021-08-06 20:05:15+01:00 Europe/London
    - Add multi-line expressions
    - Add inline comments
    - Improve tests and code coverage

0.3       2018-12-11 15:23:49+00:00 Europe/London
    - Fix broken tests on newer Perls

0.2       2018-12-06 13:23:01+00:00 Europe/London
    - Add markup documentation
    - Fix broken tests on non-English locales

0.1       2018-12-04 17:18:04+00:00 Europe/London
    - Initial release